--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
   	<div class="box zone"><img src="img/files_2.png"></div>
   </div>
   <footer class="zone yellow">Footer</footer>
+  <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
