--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   	<div class="box zone"><img src="img/files_2.png"></div>
   	<div class="box zone"><img src="img/files_2.png"></div>
   </div>
+  <button>Button</button>
   <footer class="zone yellow">Footer</footer>
   <script type="text/javascript" src="script.js"></script>
 </body>
